# FindICU.cmake

./: CHANGELOG.md  FindICU.cmake  LICENSE  README.md
tests/: uregex.c
tests/RB/: rb.c  root.txt
tests/RB/c_nopkg/: CMakeLists.txt  README.txt
tests/RB/c_pkg_common/: CMakeLists.txt
tests/RB/c_pkg_shared/: CMakeLists.txt  README.txt  build.bat  build.sh
tests/RB/c_pkg_static/: CMakeLists.txt
tests/RB/es/: es.txt  es_ES.txt
tests/RB/fr/: fr.txt
tests/RB/several_packages/: CMakeLists.txt  root.txt
tests/RB/several_packages/fr/: fr.txt
tests/basic/: CMakeLists.txt
tests/found/: CMakeLists.txt
tests/imported_target/: CMakeLists.txt
tests/version/: CMakeLists.txt  README.txt  sync.sh
tests/version/1.3.1/: utypes.h
tests/version/1.4.1.2/unicode/: utypes.h
tests/version/1.4.2/unicode/: utypes.h
tests/version/1.4/unicode/: utypes.h
tests/version/1.5/unicode/: utypes.h
tests/version/1.6/unicode/: utypes.h
tests/version/1.7/unicode/: utypes.h
tests/version/1.8.1/unicode/: utypes.h
tests/version/1.8/unicode/: utypes.h
tests/version/2.0.2/unicode/: uversion.h
tests/version/2.0.3/unicode/: uversion.h
tests/version/2.0/unicode/: uversion.h
tests/version/2.1/unicode/: uversion.h
tests/version/2.2/unicode/: uversion.h
tests/version/2.4/unicode/: uversion.h
tests/version/2.6.1/unicode/: uversion.h
tests/version/2.6.2/unicode/: uversion.h
tests/version/2.6/unicode/: uversion.h
tests/version/2.8/unicode/: uversion.h
tests/version/3.0/unicode/: uversion.h
tests/version/3.2.1/unicode/: uversion.h
tests/version/3.4.1/unicode/: uversion.h
tests/version/3.4/unicode/: uversion.h
tests/version/3.6/unicode/: uversion.h
tests/version/3.8.1/unicode/: uversion.h
tests/version/4.4.2/unicode/: uvernum.h
tests/version/49.1/: EXPECTED.txt
tests/version/49.1.1/: EXPECTED.txt
tests/version/49.1.2/: EXPECTED.txt
tests/version/50.1/: EXPECTED.txt
tests/version/50.1.1/: EXPECTED.txt
tests/version/50.1.2/: EXPECTED.txt
tests/version/50M1/: EXPECTED.txt
tests/version/50M2/: EXPECTED.txt
tests/version/51.2/: EXPECTED.txt
tests/version/51RC/: EXPECTED.txt
tests/version/53RC/: EXPECTED.txt
tests/version/54.1/: EXPECTED.txt
tests/version/54M1/: EXPECTED.txt
tests/version/55M1/: EXPECTED.txt
tests/version/56M1/: EXPECTED.txt
tests/version/56RC/: EXPECTED.txt
tests/version/57M1/: EXPECTED.txt
tests/version/57RC/: EXPECTED.txt
tests/version/58M1/: EXPECTED.txt
